Bug 447194 - Cancelling during "Open Folder" opens FS root as Project Folder
Summary: Cancelling during "Open Folder" opens FS root as Project Folder
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 21.12.0
Platform: macOS (DMG) macOS
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-18 17:33 UTC by Siddik Acil
Modified: 2021-12-24 11:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Project Plugin after Open Folder is cancelled. (124.40 KB, image/png)
2021-12-18 17:33 UTC, Siddik Acil
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Siddik Acil 2021-12-18 17:33:25 UTC
Created attachment 144655 [details]
Project Plugin after Open Folder is cancelled.

STEPS TO REPRODUCE
1. Open Kate (with project plugin active)
2. File -> Open Folder -> Cancel

OBSERVED RESULT

Your current project folder becomes the root

EXPECTED RESULT

Project plugin stays at its initial state as nothing has been chosen.

SOFTWARE/OS VERSIONS
macOS 11.6

ADDITIONAL INFORMATION
This behavior is also replicated in an older version of Kate running on Windows.
Comment 1 Christoph Cullmann 2021-12-18 18:47:55 UTC
Git commit 4cae287c774de7d3424b8be23b57b6ccce4f9fb2 by Christoph Cullmann.
Committed on 18/12/2021 at 18:47.
Pushed by cullmann into branch 'master'.

do nothing if use canceled project open

M  +8    -4    addons/project/kateprojectpluginview.cpp

https://invent.kde.org/utilities/kate/commit/4cae287c774de7d3424b8be23b57b6ccce4f9fb2
Comment 2 Waqar Ahmed 2021-12-24 11:06:45 UTC
Git commit 405efcee1d74423dd22e1606a5dabb85e147cb7b by Waqar Ahmed, on behalf of Christoph Cullmann.
Committed on 21/12/2021 at 14:47.
Pushed by waqar into branch 'release/21.12'.

do nothing if use canceled project open
(cherry picked from commit 4cae287c774de7d3424b8be23b57b6ccce4f9fb2)

M  +8    -4    addons/project/kateprojectpluginview.cpp

https://invent.kde.org/utilities/kate/commit/405efcee1d74423dd22e1606a5dabb85e147cb7b