do nothing if use canceled project open

BUG: 447194